hello-world/pod.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    sidecar.istio.io/inject: "true"
  labels:
    app: helloworld-go
  name: helloworld-go
spec:
  containers:
  - image: gcr.io/knative-samples/helloworld-go:latest
    name: helloworld-go
