hello-world/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-go-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: helloworld-go
