hello-world/istio-routes.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-go-vsvc
spec:
  hosts:
  - "helloworld-go.example.com"
  gateways:
  - helloworld-go-gateway
  http:
  - match:
    - authority:
        exact: helloworld-go.example.com
    route:
    - destination:
        port:
          number: 80
        host: helloworld-go-svc
